# httpie-semgrep

./: .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
httpie_semgrep/: __init__.py
